--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,13 @@
-
 language: python
 python:
 - "2.7"
 # command to install dependencies
 install: "pip install -r requirements.txt"
 before_script:
-- "flake8 --ignore=F403 app tests "
+- "flake8 --ignore=E501,F403 app tests "
 # command to run tests
 script:
-- lettuce tests/
+- lettuce tests
+- coverage run --omit='*lettuce*,*fuzzywuzzy*' tests/features/steps.py
+- coverage report -m
 - nosetests --with-doctest --with-coverage -s app
-- coverage run tests/features/steps.py
-after_script:
--coverage report
